Updated HW22 - fixed 22.5.

--- a/Урок 21-27. Строки. Списки/Python - HW22.html
+++ b/Урок 21-27. Строки. Списки/Python - HW22.html
@@ -265,7 +265,7 @@ hij.</code></pre>
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 22.5</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли от кого</span>, <span class="hl-text">кому</span>, <span class="hl-text">тему</span> и <span class="hl-text">сообщение</span>, затем <span class="hl-text">выводит в консоль форматированный текст</span>. Используйте переменную, в котором будет находиться форматированный текст, и <span class="grey"><b>format()</b></span> или <span class="grey"><b>f-строки</b></span>. Команда вывода должна быть одна.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли кому</span>, <span class="hl-text">от кого</span> и <span class="hl-text">сообщение</span>, затем <span class="hl-text">выводит в консоль форматированный текст</span>. Используйте переменную, в котором будет находиться форматированный текст, и <span class="grey"><b>format()</b></span> или <span class="grey"><b>f-строки</b></span>. Команда вывода должна быть одна.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите кому сообщение: <span class="input">Teston Lebra</span>
