Updated PT22 - fixed 22.2.

--- a/Урок 21-27. Строки. Списки/Python - PT22.html
+++ b/Урок 21-27. Строки. Списки/Python - PT22.html
@@ -137,8 +137,7 @@
         <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли строку</span> и <span class="hl-text">символ, который нужно удалить</span>. Затем программа <span class="hl-text">выводит в консоль исходную строку с удалёнными символами</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
-          <pre><code>Введите строку: <span class="input">Test String</span>
-Введите строку: <span class="input">abcabcdabc abcd</span>
+          <pre><code>Введите строку: <span class="input">abcabcdabc abcd</span>
 Введите символ для удаления: <span class="input">d</span>
 
 Строка с удалённым символом d: abcabcabc abc</code></pre>
