Changed PT29.2, 29.3, main, themes.

--- a/Урок 28-34. Функции. Модули/Python - PT29.html
+++ b/Урок 28-34. Функции. Модули/Python - PT29.html
@@ -190,26 +190,22 @@
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 29.2</h2>
-        <p>В магазине <span class="hl-text">"Всё Не Дорого"</span> ввели кэшбек от стоимости покупки. Поэтому им потребовалась универсальная функция <span class="function"><b>get_cashback</b></span>, которая <span class="hl-text">принимает необязательную скидку</span> (по умолчанию <span class="number"><b>5%</b></span>) и <span class="hl-text">несколько цен</span> (числа). Затем функция должна <span class="hl-text">возвращать сумму кэшбека</span>.</p>
+        <p>В магазине <span class="hl-text">"Всё Не Дорого"</span> ввели кэшбек от стоимости покупки. Поэтому им потребовалась универсальная функция <span class="function"><b>get_cashback</b></span>, которая <span class="hl-text">принимает необязательную скидку</span> (по умолчанию <span class="number"><b>5%</b></span>) и <span class="hl-text">список цен</span> (числа). Затем функция должна <span class="hl-text">возвращать сумму кэшбека</span>.</p>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 29.3</h2>
-        <p>Напишите функцию <span class="function"><b>generate_list</b></span>, которая <span class="hl-text">принимает последовательность элементов</span> и <span class="hl-text">необязательные начало</span> и <span class="hl-text">конец</span>. Функция должна <span class="hl-text">сформировать список из последовательности элементов от начала до конца включительно</span>. Затем функция должна <span class="hl-text">вернуть полученный список</span>.</p>
-        <p>После этого реализуйте меню, которое будет использовать созданную функцию:
+        <p>Напишите функцию <span class="function"><b>generate_list</b></span>, которая <span class="hl-text">принимает необязательную строку чисел через пробел</span> (по умолчанию <span class="string"><b>"10 20 30 40 50"</b></span>). Функция должна <span class="hl-text">сформировать список из последовательности чисел. Затем функция должна <span class="hl-text">вернуть полученный список</span>.</p>
+        <p>Напишите функцию <span class="function"><b>show_list</b></span>, которая <span class="hl-text">принимает список</span>. Функция должна <span class="hl-text">вывести в консоль в одну строчку через пробел данные списка</span>.</p>
+        <p>После этого реализуйте меню, которое будет использовать созданные функции:
         <div class="console">
-          <pre><code>1. Показать данные
+          <pre><code>1. Показать данные списка
 2. Ввести новые данные
-3. Сформировать список из данных
-4. Сделать срез из данных списка
-5. Завершить программу</code></pre>
+3. Завершить программу</code></pre>
         </div>
         </p>
 
-        <p>При выборе <span class="hl-text">пункта 1</span> программа <span class="hl-text">показывает в консоли отдельно имя</span>, <span class="hl-text">фамилию</span>, <span class="hl-text">день рождения</span>, <span class="hl-text">месяц рождения</span>, <span class="hl-text">год рождения</span>.</p>
-        <p>При выборе <span class="hl-text">пункта 2</span> программа <span class="hl-text">запрашивает с консоли имя</span>, <span class="hl-text">фамилию</span>, <span class="hl-text">день рождения</span>, <span class="hl-text">месяц рождения</span>, <span class="hl-text">год рождения</span>.</p>
-        <p>При выборе <span class="hl-text">пункта 3</span> программа <span class="hl-text">вызывает функцию</span> и <span class="hl-text">передаёт ей имя</span>, <span class="hl-text">фамилию</span>, <span class="hl-text">день рождения</span>, <span class="hl-text">месяц рождения</span>, <span class="hl-text">год рождения</span>, а затем <span class="hl-text">выводит в консоль сформированный список</span>.
-        <p>
-        <p>При выборе <span class="hl-text">пункта 4</span> программа <span class="hl-text">выводит в консоль сформированный список</span> и <span class="hl-text">запрашивает начало</span> и <span class="hl-text">конец среза</span>. Затем <span class="hl-text">передаёт данные в функцию</span> и <span class="hl-text">выводит в консоль полученный срез</span>.</p>
+        <p>При выборе <span class="hl-text">пункта 1</span> программа <span class="hl-text">показывает в консоли список чисел</span>.</p>
+        <p>При выборе <span class="hl-text">пункта 2</span> программа <span class="hl-text">запрашивает с консоли числа через пробел</span>.</p>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 29.4</h2>
