Updated PT25 and HW26 - minor fixes.

--- a/Урок 21-27. Строки. Списки/Python - HW26.html
+++ b/Урок 21-27. Строки. Списки/Python - HW26.html
@@ -321,7 +321,7 @@
 
         <p>При выборе <span class="hl-text">пункта 1</span> программа <span class="hl-text">показывает в консоли всех студентов</span>.</p>
         <p>При выборе <span class="hl-text">пункта 2</span> программа <span class="hl-text">запрашивает с консоли имена до тех пор, пока не введут пустую строку</span>. Из введённых данных программа должна <span class="hl-text">cформировать список</span>.</p>
-        <p>При выборе <span class="hl-text">пункта 3</span> программа <span class="hl-text">запрашивает с консоли имена до тех пор, пока не введут пустую строку</span>. Введённые данные программа должна <span class="hl-text">добавлять список</span>.</p>
+        <p>При выборе <span class="hl-text">пункта 3</span> программа <span class="hl-text">запрашивает с консоли имена до тех пор, пока не введут пустую строку</span>. Введённые данные программа должна <span class="hl-text">добавлять в список</span>.</p>
         <p>При выборе <span class="hl-text">пункта 4</span> программа <span class="hl-text">запрашивает с консоли индекс</span> и <span class="hl-text">удаляет студента по индексу</span>. Используйте <code class="python"><b>del</b></code>.</p>
         <p>При выборе <span class="hl-text">пункта 5</span> программа <span class="hl-text">запрашивает с консоли индекс</span>, затем <span class="hl-text">показывает в консоли имя под выбранным индексом</span>. После этого программа <span class="hl-text">запрашивает с консоли новое имя</span> и <span class="hl-text">запрашивает подтверждение на изменение</span>.</p>
         <p>При выборе <span class="hl-text">пункта 6</span> программа <span class="hl-text">запрашивает с консоли имя</span>, затем <span class="hl-text">показывает в консоли индексы найденного имени</span>.</p>
