--- a/Урок 21-27. Строки. Списки/Python - PT25.html
+++ b/Урок 21-27. Строки. Списки/Python - PT25.html
@@ -161,6 +161,7 @@
         <div class="console">
           <pre><code><индекс> <слово_доход/расход> <число_как_есть></code></pre>
         </div>
+        Доходом считается <span class="hl-text">положительное число</span>, а расходом - <span class="hl-text">отрицательное</span>.
         </p>
 
         <p>При выборе <span class="hl-text">пункта 3</span> программа <span class="hl-text">запрашивает с консоли начальный индекс</span> и <span class="hl-text">конечный индекс</span>. Затем программа <span class="hl-text">выводит в консоль данные из списка в границах индексов включительно по тому же шаблону, что и выше</span>.</p>
