Updated HW32 - fixed console.

--- a/Урок 28-34. Функции. Модули/Python - HW32.html
+++ b/Урок 28-34. Функции. Модули/Python - HW32.html
@@ -222,7 +222,7 @@
           <pre><code>1. Показать список имён
 2. Добавить имя
 3. Удалить имя по порядковому номеру
-4. Изменить имя по порядковому 
+4. Изменить имя по порядковому номеру
 5. Показать порядковый номер по имени
 6. Завершить программу</code></pre>
         </div>
