Changed plan of course. Added 2 tasks to PT42.

--- a/Урок 41-48. ООП/Python - PT42.html
+++ b/Урок 41-48. ООП/Python - PT42.html
@@ -182,8 +182,32 @@
         <p>Используя созданный класс в <span class="hl-text">Практическом Задании 42.1</span>, реализуйте следующее меню:
         <div class="console">
           <pre><code>1. Показать всех студентов
-2. Добавить нового студента в список
-3. Удалить студента из списка по идентификатору</code></pre>
+2. Показать студента по идентификатору
+3. Добавить нового студента в список
+4. Удалить студента из списка по идентификатору
+5. Добавить оценку студенту</code></pre>
+        </div>
+        </p>
+      </div>
+      <div class="right-rect">
+        <h2>Практическое Задание 42.3</h2>
+        <p>Создайте класс <span class="hl-text">"Банковская карта"</span>. Этот класс должен <span class="hl-text">хранить поля для идентификатора</span>, <span class="hl-text">имени</span>, <span class="hl-text">фамилии</span>, <span class="hl-text">баланса</span> и <span class="hl-text">CVV/CVC кода</span>.
+          <br>Для класса определите <span class="hl-text">строковое представление</span> (<code class="python"><b>__str__</b></code>) и <span class="hl-text">конструктор</span> (<code class="python"><b>__init__</b></code>).
+          <br>Для класса определите <span class="hl-text">метод проверки баланса</span>. Метод <span class="hl-text">принимает целое число.</span>. Если принимаемое число больше нуля, то <span class="hl-text">возвращает</span> <code class="python"><b>True</b></code>, в противном случае <span class="hl-text">возвращает</span> <code class="python"><b>False</b></code>.
+          <br>Для класса определите <span class="hl-text">метод пополнения баланса</span>. Метод <span class="hl-text">принимает целое число</span>, <span class="hl-text">вызывает метод проверки баланса</span>. Если метод вернул <code class="python"><b>True</b></code>, то <span class="hl-text">пополняет баланс</span>, <span class="hl-text">возвращает</span> <code class="python"><b>True</b></code>. В противном случае <span class="hl-text">возвращает</span> <code class="python"><b>False</b></code>.
+          <br>Для класса определите <span class="hl-text">метод снятия с баланса</span>. Метод <span class="hl-text">принимает целое число</span>, <span class="hl-text">вызывает метод проверки баланса</span>. Если метод вернул <code class="python"><b>True</b></code>, то <span class="hl-text">снимает с баланса</span>, <span class="hl-text">возвращает</span> <code class="python"><b>True</b></code>. В противном случае <span class="hl-text">возвращает</span> <code class="python"><b>False</b></code>.
+        </p>
+      </div>
+      <div class="right-rect">
+        <h2>Практическое Задание 42.4</h2>
+        <p>Используя созданный класс в <span class="hl-text">Практическом Задании 42.3</span>, реализуйте следующее меню:
+        <div class="console">
+          <pre><code>1. Показать все карты
+2. Показать карту по идентификатору
+3. Добавить карту в список
+4. Удалить карту из списка по идентификатору
+5. Пополнить баланс карты по идентификатору
+6. Снять баланс карты по идентификатору</code></pre>
         </div>
         </p>
       </div>
