Updated HW44 and PT44 - changed tasks.

--- a/Урок 41-48. ООП/Python - PT44.html
+++ b/Урок 41-48. ООП/Python - PT44.html
@@ -172,61 +172,32 @@
     <div class="right-block">
       <div class="right-rect">
         <h2>Практическое Задание 44.1</h2>
-        <p>Создайте класс <span class="hl-text">"Транспорт"</span>. Этот класс должен <span class="hl-text">хранить поля для идентификатора</span>, <span class="hl-text">бренда</span>, <span class="hl-text">марки</span>, <span class="hl-text">максимальной скорости</span> и <span class="hl-text">количества пассажиров</span>.
+        <p>Создайте класс <span class="hl-text">"Транспорт"</span>. Этот класс должен <span class="hl-text">хранить поля для идентификатора</span> и <span class="hl-text">максимальной скорости</span>.
           <br>Для класса определите <span class="hl-text">строковое представление</span>, <span class="hl-text">конструктор</span> и <span class="hl-text">свойства</span>.
+          <br>Для класса определите <span class="hl-text">метод движения</span>. Метод <span class="hl-text">принимает расстояние в км</span> и <span class="hl-text">возвращает время в часах</span>, которое потратит транспорт с максимальной скоростью на преодоление указанного расстояния.
+          <br>Для класса определите <span class="hl-text">метод определения требуемого количества ресурсов за прохождение расстояния</span>. Метод <span class="hl-text">принимает расстояние в км</span> и <span class="hl-text">возвращает количество требуемого ресурса</span>. В данном случае метод просто <span class="hl-text">возвращает</span> <code class="python"><b>0</b></code>.
         </p>
 
-        <p>Создайте класс <span class="hl-text">"Автомобиль"</span>. Этот класс должен <span class="hl-text">наследоваться от класса "Транспорт"</span> и <span class="hl-text">хранить поля для цены за км</span> и <span class="hl-text">рейтинг</span>.
-          <br>Для класса определите строковое представление, конструктор и свойства.
-          <br>Для класса определите <span class="hl-text">метод получения общей стоимости за указанные км</span>.
-        </p>
-
-        <p>Создайте класс <span class="hl-text">"Автобус"</span>. Этот класс должен <span class="hl-text">наследоваться от класса "Транспорт"</span> и <span class="hl-text">хранить поля для электронной оплаты</span> (<code class="python"><b>True</b></code>/<code class="python"><b>False</b></code>), <span class="hl-text">списка остановок</span> и <span class="hl-text">цены за остановку</span>.
+        <p>Создайте класс <span class="hl-text">"Автомобиль"</span>. Этот класс должен <span class="hl-text">наследоваться от класса "Транспорт"</span> и <span class="hl-text">хранить поля для топлива</span> и <span class="hl-text">расхода топлива на км</span>.
           <br>Для класса определите <span class="hl-text">строковое представление</span>, <span class="hl-text">конструктор</span> и <span class="hl-text">свойства</span>.
-          <br>Для класса определите <span class="hl-text">метод добавления</span>, <span class="hl-text">изменения</span> и <span class="hl-text">удаления остановки</span>.
-          <br>Для класса определите <span class="hl-text">метод получения общей стоимости за указанные начальную</span> и <span class="hl-text">конечную остановку</span>.
+          <br>Для класса переопределите <span class="hl-text">метод определения требуемого количества ресурсов за прохождение расстояния</span>. Метод <span class="hl-text">принимает расстояние в км</span> и <span class="hl-text">возвращает количество требуемого топлива</span>.
         </p>
-
-        <p>Создайте класс <span class="hl-text">"Самолёт"</span>. Этот класс должен <span class="hl-text">наследоваться от класса "Транспорт"</span> и <span class="hl-text">хранить поля для максимального объёма груза</span> (куб. м), <span class="hl-text">максимального веса груза</span> (кг) и <span class="hl-text">цены за кг груза</span>.
-          <br>Для класса <span class="hl-text">определите строковое представление</span>, <span class="hl-text">конструктор</span> и <span class="hl-text">свойства</span>.
-          <br>Для класса определите <span class="hl-text">метод получения общей стоимости за указанные объём</span> и <span class="hl-text">вес груза</span>.
+        <p>Создайте класс <span class="hl-text">"Электромобиль"</span>. Этот класс должен <span class="hl-text">наследоваться от класса "Транспорт"</span> и <span class="hl-text">хранить поля для заряда</span> и <span class="hl-text">расхода заряда за час</span>.
+          <br>Для класса определите <span class="hl-text">строковое представление</span>, <span class="hl-text">конструктор</span> и <span class="hl-text">свойства</span>.
+          <br>Для класса переопределите <span class="hl-text">метод определения требуемого количества ресурсов за прохождение расстояния</span>. Метод <span class="hl-text">принимает расстояние в км</span> и <span class="hl-text">возвращает количество требуемого заряда</span>.
         </p>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 44.2</h2>
-        <p>Использовав классы из <span class="hl-text">Практического Задания 44.1</span>, <span class="hl-text">создайте по <code class="python"><b>2</b></code> автомобиля</span> и <span class="hl-text">добавьте их в список автомобилей</span>. Проделайте то же самое для <span class="hl-text">автобусов</span> и <span class="hl-text">самолётов</span>.</p>
-        <p>
+        <p>Реализуйте следующее меню:
         <div class="console">
-          <pre><code>Реализуйте следующее меню:
-1. Показать весь имеющийся транспорт
-2. Заказать перевозку пассажиров автомобилем
-3. Заказать перевозку груза самолётом
-4. Определить стоимость поездки на автобусе
+          <pre><code>1. Показать все автомобили из списка
+2. Добавить автомобиль в список
+3. Удалить автомобиль в список
+4. Определить количество ресурса за прохождение расстояния
 5. Завершить программу</code></pre>
         </div>
         </p>
-
-        <p>При выборе <span class="hl-text">пункта 1</span> программа <span class="hl-text">показывает весь транспорт в виде</span>:
-        <div class="console">
-          <pre><code>АВТОМОБИЛИ
-...
-...
-=============================================
-АВТОБУСЫ
-...
-...
-=============================================
-САМОЛЁТЫ
-...
-...</code></pre>
-        </div>
-        </p>
-
-        <p>При выборе <span class="hl-text">пункта 2</span> программа <span class="hl-text">запрашивает с консоли количество пассажиров</span> и <span class="hl-text">количество км</span>. Затем программа <span class="hl-text">выводит в консоль список автомобилей, которые могут перевозить указанное количество пассажиров,</span> и <span class="hl-text">общую стоимость поездки каждого доступного автомобиля</span>.</p>
-
-        <p>При выборе <span class="hl-text">пункта 3</span> программа <span class="hl-text">запрашивает с консоли количество объёма</span> и <span class="hl-text">веса груза</span>. Затем программа <span class="hl-text">выводит в консоль список самолётов, которые могут перевозить указанное количество объёма</span> и <span class="hl-text">веса груза</span>, а также <span class="hl-text">выводит общую стоимость каждого доступного самолёта</span>.</p>
-
-        <p>При выборе <span class="hl-text">пункта 4</span> программа <span class="hl-text">запрашивает с консоли начальную остановку</span> и <span class="hl-text">конечную остановку</span>. Затем программа <span class="hl-text">выводит в консоль список автобусов, которые содержат указанные остановки</span>, и <span class="hl-text">общую стоимость поездки</span>.</p>
       </div>
     </div>
   </div>
